@@ -22,6 +22,9 @@ export(corpusTm)
 export(corpusTopics)
 export(is.corpus)
 export(kRpSource)
+export(kRp_corpus)
+export(kRp_sourcesCorpus)
+export(kRp_topicCorpus)
 export(simpleCorpus)
 export(sourcesCorpus)
 export(tif_as_tokens_df)
