@@ -4,8 +4,8 @@
 #' Package: \tab tm.plugin.koRpus\cr
 #' Type: \tab Package\cr
 #' Version: \tab 0.01-4\cr
-#' Date: \tab 2018-02-19\cr
-#' Depends: \tab R (>= 2.10.0),koRpus (>= 0.11-2),sylly\cr
+#' Date: \tab 2018-03-01\cr
+#' Depends: \tab R (>= 2.10.0),koRpus (>= 0.11-3),sylly\cr
 #' Encoding: \tab UTF-8\cr
 #' License: \tab GPL (>= 3)\cr
 #' LazyLoad: \tab yes\cr
